--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,3 +18,51 @@ input[type="number"]:focus,
 [contenteditable].form-control:focus {
   box-shadow: inset 0 -1px 1px #ddd;
 }
+
+.home-bg {
+  background-image: linear-gradient(135deg, #ffd3a5 10%, #ffd3a5 100%);
+}
+
+.card-bg {
+  background-image: linear-gradient(135deg, #eead92 10%, #fd6585 100%);
+}
+
+.card-badge {
+  /* background-image: linear-gradient(135deg, #ffd3a5 10%, #ffd3a5 100%); */
+  background-image: radial-gradient(
+    circle 400px at 6.8% 8.3%,
+    rgba(255, 244, 169, 1) 0%,
+    rgba(255, 244, 234, 1) 100.2%
+  );
+}
+
+.btn-add-form {
+  background-image: radial-gradient(
+    circle 325px at 19.2% 64.8%,
+    rgba(254, 62, 101, 1) 9.7%,
+    rgba(166, 24, 146, 1) 91.3%
+  );
+}
+.nav-bg {
+  background-image: linear-gradient(
+    109.6deg,
+    rgba(209, 0, 116, 1) 11.2%,
+    rgba(110, 44, 107, 1) 91.1%
+  );
+}
+
+.input-field-bg {
+  background-color: #FFF4CB !important;
+}
+
+.spinner-clr {
+  color: #f01e5c;
+}
+
+.btn-form {
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgba(14, 174, 87, 1) 0%,
+    rgba(12, 116, 117, 1) 90%
+  );
+}
